app/assets/stylesheets/home.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html, body {width: auto!important; overflow-x: hidden!important} 

@media screen and (max-width: 480px) {
  .logo{
    width: 50%;
    height: 125px;
    margin-left: 25%;
    margin-right: 35%;
  }
}
 @media screen and (min-width: 480px) {
  .logo{
    width: 25%;
    height: 125px;
    margin-left: 35%;
    margin-right: 40%;
  }
}

.logo_container{
  background-color: #FFFFFF;
}

h2{
  text-align:center;
  padding: 20px;
}
/* Slider */

.slick-slide {
    margin: 0px 20px;
}

.slick-slide img {
    width: 100%;
}

.slick-slider
{
    position: relative;
    display: block;
    box-sizing: border-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
            user-select: none;
    -webkit-touch-callout: none;
    -khtml-user-select: none;
    -ms-touch-action: pan-y;
        touch-action: pan-y;
    -webkit-tap-highlight-color: transparent;
}

.slick-list
{
    position: relative;
    display: block;
    overflow: hidden;
    margin: 0;
    padding: 0;
}
.slick-list:focus
{
    outline: none;
}
.slick-list.dragging
{
    cursor: pointer;
    cursor: hand;
}

.slick-slider .slick-track,
.slick-slider .slick-list
{
    -webkit-transform: translate3d(0, 0, 0);
       -moz-transform: translate3d(0, 0, 0);
        -ms-transform: translate3d(0, 0, 0);
         -o-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
}

.slick-track
{
    position: relative;
    top: 0;
    left: 0;
    display: block;
}
.slick-track:before,
.slick-track:after
{
    display: table;
    content: '';
}
.slick-track:after
{
    clear: both;
}
.slick-loading .slick-track
{
    visibility: hidden;
}

.slick-slide
{
    display: none;
    float: left;
    height: 100%;
    min-height: 1px;
}
[dir='rtl'] .slick-slide
{
    float: right;
}
.slick-slide img
{
    display: block;
}
.slick-slide.slick-loading img
{
    display: none;
}
.slick-slide.dragging img
{
    pointer-events: none;
}
.slick-initialized .slick-slide
{
    display: block;
}
.slick-loading .slick-slide
{
    visibility: hidden;
}
.slick-vertical .slick-slide
{
    display: block;
    height: auto;
    border: 1px solid transparent;
}
.slick-arrow.slick-hidden {
    display: none;
}

.home{
  width: 100%;
  height: auto;
  text-align: center;
  width: 90%;
  margin: 0 auto;
  transition: transform .2s;
  padding: 5px;
}

.home:hover {
    -ms-transform: scale(1.10); /* IE 9 */
    -webkit-transform: scale(1.10); /* Safari 3-8 */
    transform: scale(1.10);
    background-color: #e6f5ff;
    border: 1px solid #e6f5ff;
}

.donor_img{
  mix-blend-mode: multiply;
}

.work_img{
  width: 100%;
  height: 175px;
  border-radius: 5px;
}

@media screen and (max-width: 480px) {
  .news_img{
    width: 100%;
    height: 300px;
    float: left;
    padding: 10px;
  }
}

@media screen and (min-width: 480px) {
  .news_img{
    width: 100%;
    height: auto;
    float: left;
    padding: 10px;
  }
}

h2, h3 {
  text-align: center;
}

.latest_news{
  width: 100%;
  margin: 0 auto;
  text-align: center;
  white-space: normal;
}

.welcome{
  width: 25%;
  height: auto;
  border: 1px solid black;
  margin: 0 auto;
}

#services {
  position: relative;
  background: #F5FBFF;
}

.section {
  padding: 70px 0;
}

.section {
  padding: 70px 0;
}
.section-header {
  color: #fff;
  margin-bottom: 40px;
  text-align: center;
}
.section-header .section-title {
  font-size: 42px;
  margin-top: 0;
  text-transform: uppercase;
  font-weight: 100;
  color: #0d3559;
  position: relative;
}
.section-header .section-title span {
  color: #f13e4b;
}
.section-header .section-subtitle {
  margin-top: 15px;
  color: #f13e4b;
  font-size: 14px;
  font-weight: 400;
}
.section-header .lines {
  margin: auto;
  width: 70px;
  position: relative;
  border-top: 2px solid #346afe;
  margin-top: 15px;
}
.section-header .lines:before {
  position: absolute;
  content: "";
  display: inline-block;
  height: 10px;
  width: 10px;
  top: -6px;
  border: 4px solid #fff;
  border-radius: 50%;
  background: #4676fa;
  left: 29px;
}

.item-boxes .icon {
  width: 60px;
  height: 60px;
  text-align: center;
  border: 1px solid #f13e4b;
  display: inline-block;
  border-radius: 5px;
  margin-top: 10px;
  margin-bottom: 15px;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}
.item-boxes .icon i {
  font-size: 30px;
  line-height: 60px;
  color: #f13e4b;
}

#myCarousel{
    width: 90%;
    margin: 0 auto;
}

.article{
  font-size: 16px;
  font-weight: bold;
}

.show_item{
  width: 50%;
  margin: 0 auto;
  text-align: center;
}

.topnav {
  overflow: hidden;
  background-color: #f13e4b;
}

.topnav a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.active {
  background-color: #4CAF50;
  color: white;
}

.topnav .icon {
  display: none;
}

.dropdown {
    float: left;
    overflow: hidden;
}

.dropdown .dropbtn {
    font-size: 17px;
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.topnav a:hover, .dropdown:hover .dropbtn {
  background-color: #555;
  color: white;
}

.dropdown-content a:hover {
    background-color: #ddd;
    color: black;
}

.dropdown:hover .dropdown-content {
    display: block;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child), .dropdown .dropbtn {
    display: none;
  }
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  .topnav.responsive .dropdown {float: none;}
  .topnav.responsive .dropdown-content {position: relative;}
  .topnav.responsive .dropdown .dropbtn {
    display: block;
    width: 100%;
    text-align: left;
  }
}

@media screen and (max-width: 600px) {
  .card{
    width: 100%;
    margin: 0 auto;
  }
}

@media screen and (min-width: 600px) {
  .card{
    width: 60%;
    margin: 0 auto;
  }
}

.card-title{
  font-weight: bold;
}

.site-info p {
  text-align: center;
  line-height: 34px;
  color: #52565f;
}
.site-info p a {
  color: #52565f;
}
.site-info p a:hover {
  color: #4676fa;
}

.social-icons {
  margin-bottom: 20px;
  text-align: center;
}
.social-icons ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
.social-icons ul li {
  display: inline;
}
.social-icons ul li a {
  display: inline-block;
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 15px;
  border-radius: 4px;
  border: 1px solid rgba(255, 254, 254, 0.07);
  line-height: 40px;
  width: 40px;
  height: 40px;
  text-align: center;
  font-size: 16px;
}
.social-icons ul li a:hover {
  color: #ffffff;
}
.facebook a {
  color: #4867aa;
}
.facebook a:hover {
  background: #4867aa;
}
.twitter a {
  color: #1da1f2;
}
.twitter a:hover {
  background: #1da1f2;
}
.google-plus a {
  color: #dd4d42;
}
.google-plus a:hover {
  background: #dd4d42;
}
.youtube a {
  color: #df2926;
}
.youtube a:hover {
  background: #df2926;
}
.linkedin a {
  color: #007bb6;
}
.linkedin a:hover {
  background: #007bb6;
}
.pinterest a {
  color: #bd081c;
}
.pinterest a:hover {
  background: #bd081c;
}
.dribbble a {
  color: #ea4c89;
}
.dribbble a:hover {
  background: #ea4c89;
}
.behance a {
  color: #0b7cff;
}
.behance a:hover {
  background: #0b7cff;
}
.subscribe-box {
  margin-top: 18px;
}

/* ==========================================================================
   Counter Section Style
   ========================================================================== */
.counters {
  background-color: #FFFFFF;
  position: relative;
}
.counters .facts-item {
  text-align: center;
  color: #4676fa;
}
.counters .facts-item .icon {
  margin-bottom: 20px;
}
.counters .facts-item .icon i {
  font-size: 50px;
  color: #f13e4b;
}
.counters .facts-item .fact-count h3 {
  font-size: 35px;
  color: #f13e4b;
  margin-bottom: 15px;
}
.counters .facts-item .fact-count h4 {
  font-size: 20px;
  color: #f13e4b;
}

.count, .counted {
  color: #f13e4b;
}


/*************************************
          Play video
**************************************/
.play-video .play-video-bg { padding: 100px 0 300px; position: relative; }
.play-video .play-video-bg h3 { line-height: 40px; margin-bottom: 0px; }
.play-video .video-info { margin-top: -200px; position: relative; z-index: 1; }
.play-video .video-info a { width: 90px; height: 90px; padding: 8px; background: transparent; border: 2px solid #ffffff; display: inline-block; margin: 0 auto; border-radius: 50%; left: 0; position: absolute; right: 0; top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-50%); -o-transform: translateY(-50%); -ms-transform: translateY(-50%); -moz-transform: translateY(-50%); z-index: 9999; font-size: 20px; }
.play-video .video-info a i { width: 70px; height: 70px; line-height: 72px; background: #ffffff; color: #C00000; border-radius: 50%; padding-left: 4px; transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -o-transition: all 0.5s ease-in-out; -ms-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; }
.play-video .video-info a:hover i { background: #323232; color: #ffffff; }
.play-video .video-info:before {  content: ""; height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 0; }

/*play-video*/
.play-video-2-section .custom-block-2 { margin-top: 0; }
.play-video-2 .play-video-bg { padding: 100px 0 300px; position: relative; }
.play-video-2 .play-video-bg h3 { line-height: 40px; margin-bottom: 0px; }
.play-video-2 .video-info {  position: relative; z-index: 1; }
.play-video-2 .video-info a { width: 90px; height: 90px; padding: 8px; background: transparent; border: 2px solid #ffffff; display: inline-block; margin: 0 auto; border-radius: 50%; left: 0; position: absolute; right: 0; top: 50%; transform: translateY(-50%); -webkit-transform: translateY(-50%); -o-transform: translateY(-50%); -ms-transform: translateY(-50%); -moz-transform: translateY(-50%); z-index: 9999; font-size: 20px; }
.play-video-2 .video-info a i { width: 70px; height: 70px; line-height: 72px; background: #ffffff; color: #C00000; border-radius: 50%; padding-left: 4px; transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -o-transition: all 0.5s ease-in-out; -ms-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; }
.play-video-2 .video-info a:hover i { background: #323232; color: #ffffff; }
.play-video-2 .video-info:before { background: rgba(219, 45, 46, 0.8); content: ""; height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 0; }

.play-video-2-section .custom-block-2 {
    margin-top: 40px;
  }

  .play-video-2 img {
    width: 100%;
  }

  .play-video .video-info {
    margin-top: -120px;
  }

  .play-video .play-video-bg {
    padding: 100px 0 190px;
  }

  .play-video .video-info {
    margin-top: -70px;
  }

  .play-video .play-video-bg {
    padding: 80px 0 100px;
  }

